[gd_scene load_steps=8 format=3 uid="uid://cknrdqeb7yg87"]

[ext_resource type="StyleBox" uid="uid://c84c3q25b2vo3" path="res://Themes/hover_button.tres" id="1_f0dyb"]
[ext_resource type="StyleBox" uid="uid://blmm4ii14xlj" path="res://Themes/normal_button.tres" id="2_oax00"]
[ext_resource type="Script" uid="uid://vuqev5o0nd44" path="res://Scripts/Menu/MenuScript.gd" id="3_glkuc"]
[ext_resource type="Texture2D" uid="uid://b47wkg5ccxbtd" path="res://Assets/gui/GUI.png" id="4_rcs3q"]
[ext_resource type="Texture2D" uid="uid://crtr0l7r46qhp" path="res://Assets/game_menu_background.png" id="5_jfa4h"]

[sub_resource type="Theme" id="Theme_1rerr"]
Button/font_sizes/font_size = 20
Button/styles/focus = null
Button/styles/hover = ExtResource("1_f0dyb")
Button/styles/normal = ExtResource("2_oax00")
Button/styles/pressed = null

[sub_resource type="AtlasTexture" id="AtlasTexture_1rerr"]
atlas = ExtResource("4_rcs3q")
region = Rect2(2, 34, 44, 44)

[node name="menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_1rerr")
script = ExtResource("3_glkuc")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -70.5
offset_top = -99.5
offset_right = 70.5
offset_bottom = 99.5
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_1rerr")
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5
axis_stretch_horizontal = 2
axis_stretch_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -22.0
offset_right = 20.0
offset_bottom = 22.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="New Game" type="Button" parent="NinePatchRect/VBoxContainer"]
layout_mode = 2
text = "New Game"

[node name="Load Game" type="Button" parent="NinePatchRect/VBoxContainer"]
layout_mode = 2
text = "Load Game"

[node name="Settings" type="Button" parent="NinePatchRect/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="Exit" type="Button" parent="NinePatchRect/VBoxContainer"]
layout_mode = 2
text = "Exit
"

[node name="TextureRect" type="TextureRect" parent="."]
light_mask = 0
z_index = -20
z_as_relative = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -336.0
offset_top = -195.0
offset_right = 418.0
offset_bottom = 229.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("5_jfa4h")
expand_mode = 2

[connection signal="pressed" from="NinePatchRect/VBoxContainer/New Game" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="NinePatchRect/VBoxContainer/Load Game" to="." method="_on_load_game_pressed"]
[connection signal="pressed" from="NinePatchRect/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="NinePatchRect/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
